Return `gulp.config.js` and cli support.
The configuration object is to be exported in `gulp.config.js`. It can also be passed to the function this module exports, directly from `gulpfile.js`, in which case gulp's cli would be used directly.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "glupost",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Declarative gulp interface",
   "license": "MIT",
   "author": "Jan Ivica",
   "repository": "independentgeorge/glupost",
+  "bin": "bin.js",
   "dependencies": {
     "gulp": "gulpjs/gulp#4.0",
     "gulp-plumber": "^1.1.0",
