--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glupost",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "license": "MIT",
   "author": "Jan Ivica",
   "repository": "independentgeorge/glupost",
@@ -8,14 +8,14 @@
     "test": "mocha tests.js"
   },
   "dependencies": {
-    "gulp": "gulpjs/gulp#4.0",
-    "gulp-rename": "1.2.2",
+    "gulp": "4.0.0",
+    "gulp-rename": "1.4.0",
     "through2": "2.0.3",
-    "undertaker-forward-reference": "1.0.1",
-    "vinyl": "2.1.0"
+    "undertaker-forward-reference": "1.0.2",
+    "vinyl": "2.2.0"
   },
   "devDependencies": {
-    "fs-extra": "5.0.0",
-    "mocha": "5.1.0"
+    "fs-extra": "7.0.0",
+    "mocha": "5.2.0"
   }
 }
