--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Jan Ivica",
   "repository": "independentgeorge/glupost",
   "scripts": {
-    "test": "mocha tests.js"
+    "test": "mocha tests.js",
+    "lint": "eslint ."
   },
   "dependencies": {
     "gulp": "4.0.0",
@@ -15,6 +16,8 @@
     "vinyl": "2.2.0"
   },
   "devDependencies": {
+    "eslint": "5.6.0",
+    "eslint-plugin-so-jah-seh": "0.1.2",
     "fs-extra": "7.0.0",
     "mocha": "5.2.0"
   }
