--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "gulp": "4.0.2",
     "gulp-rename": "2.0.0",
     "through2": "3.0.1",
-    "undertaker-forward-reference": "1.0.2",
     "vinyl": "2.2.0"
   },
   "devDependencies": {
@@ -20,5 +19,11 @@
     "eslint-plugin-so-jah-seh": "0.1.3",
     "fs-extra": "8.1.0",
     "mocha": "7.1.1"
+  },
+  "eslintConfig": {
+    "extends": "plugin:so-jah-seh/all",
+    "parserOptions": {
+      "sourceType": "script"
+    }
   }
 }
