--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "eslint": "6.8.0",
     "eslint-plugin-so-jah-seh": "0.1.3",
+    "fkill": "7.0.0",
     "fs-extra": "8.1.0",
     "mocha": "7.1.1"
   },
