--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glupost",
-  "version": "3.1.1",
+  "version": "4.0.0",
   "license": "MIT",
   "author": "Jan Ivica",
   "repository": "independentgeorge/glupost",
@@ -11,14 +11,13 @@
   "dependencies": {
     "gulp": "4.0.2",
     "gulp-rename": "2.0.0",
-    "through2": "3.0.1",
-    "vinyl": "2.2.0"
+    "through2": "3.0.1"
   },
   "devDependencies": {
     "eslint": "6.8.0",
     "eslint-plugin-so-jah-seh": "0.1.3",
     "fkill": "7.0.0",
-    "fs-extra": "8.1.0",
+    "fs-extra": "9.0.0",
     "mocha": "7.1.1"
   },
   "eslintConfig": {
